# simple-sockets

./: .gitignore  LICENSE  README.md
example/: CMakeLists.txt  echo-client.cpp  echo-server.cpp
example/echo/client/: client.cpp  premake5.lua
example/echo/server/: premake5.lua  server.cpp
include/: simple-sockets.h
